# Pjatk-MIW

./: .gitignore  README.md  pyproject.toml
01/: 01_tuple_list_dic.py  02_import.py  03_numpy.py  04_pyplot.py  05_SciPy_interpolacja.py  06_SciPy_stationary.py
02 projekt 1/: 000_Bayes_Theorem.py  001_Bayesian_network.py  002_stationary_vector.py  Projekt_01_papier_nozyce_kamien.py  projekt_01.ipynb
03 projekt 2/: 01 k-NN klasy.py  02 k-NN l sasiadow.py  03 k-NN krzywa walidacji.py  04 k means.py  05 perceptron.py  06b perceptron multiclass.py  07b logreg multiclass.py  README.md  project_02.ipynb  reglog_aszmig.py
05/: 00_decision tree.py  01_random forest.py  02_SVM_log reg.py
06 projekt 3/: 01_import_data.py  02_linear_model.py  03_polynomial_model.py  04_models_comparison.py  06_prezentacja.pptx  project_03.ipynb
07 projekt 4a wstep do sieci/: 00_neural_network_step_by_step.py  00_neural_network_step_by_step_completed.py  01_neural_network_simple.py  project_04a.ipynb
08 projekt 4b Sieci neuronowe/: 08_prezentacja.pptx  11_classification_neural_network.py  kopia_notatnika_00_regresja_dane_liniowe_sequential_model.py  kopia_notatnika_01_regresja_dane_paraboliczne_sequential_model.py  kopia_notatnika_02_cross_val_score.py  kopia_notatnika_03_klasyfikacja_sequential_model.py  kopia_notatnika_04_klasyfikacja_functional_api_model.py  kopia_notatnika_05_klasyfikacja_complex_graph_topologies.py  project_4b.ipynb
08 projekt 6/: CDA.mst  timeser.py
09 projekt 5 Sieci konwolucyjne/: project_5.ipynb
09 projekt 6/: pred.py
11 autokoder/: 02_autoencoder_noise.py  (+6 more)
(+57 files in other folders)
