[tool.poetry]
name = "miw"
version = "0.1.0"
description = ""
authors = ["OlekZima <zimenkoalex34@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.4.1.post1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
scipy = "^1.12.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
